# GIMC

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  LICENSE  README.md  a.out  clearup.sh  logger  main.cpp  test.s
Docs/: Pass.md  backEnd.md  design.md  ir.md  style.md  utils.md
IR/: BBlock.cpp  ConstValue.cpp  Function.cpp  GlobalVar.cpp  IRBuilder.cpp  Inst.cpp  Module.cpp  Type.cpp  Value.cpp  example.cpp  lib.ll  libsysy.c  tacIRBuilder.cpp  testIR.sh
IRToArm/: IRToArm.cpp
Integrate/: CMakeLists.txt  bfs.s  check  check.cpp  genExe.sh  getPath.sh  main.cpp  test.sh  testout.out
LIR/codegen/: ToLir.cpp
LIR/lirInst/: LirBinary.cpp  LirInst.cpp  LirInstMove.cpp
LIR/lirOperand/: Addr.cpp  FImm.cpp  FPhyReg.cpp  FVReg.cpp  IImm.cpp  IPhyReg.cpp  IVReg.cpp  Imm.cpp  Reg.cpp  lirOperand.cpp
LIR/lirVisitor/: LirBlock.cpp  LirFunction.cpp
LirPass/: RegAllocStack.cpp
LirToArm/: 00_main.s  21_if_test2.s  CMakeLists.txt  LirToArm.cpp  LirToArm1.cpp  Makefile  example.cpp
Pass/: Domination.cpp  Mem2reg.cpp  PassManager.cpp  Pres_Succs_Calculate.cpp
Test/: emit_asm.sh  init.sh  mv.sh  qemu_C.sh  sy2c.sh
Test/functional/: test.s
Test/functional/CFile/: 00_main.c  01_var_defn2.c  02_var_defn3.c  03_arr_defn2.c  04_arr_defn3.c  05_arr_defn4.c  06_const_var_defn2.c  07_const_var_defn3.c  08_const_array_defn.c  09_func_defn.c  10_var_defn_func.c  11_add2.c  12_addc.c  13_sub2.c  14_subc.c  15_mul.c  16_mulc.c  17_div.c  18_divc.c  19_mod.c  20_rem.c  21_if_test2.c  22_if_test3.c  23_if_test4.c  24_if_test5.c  25_while_if.c  26_while_test1.c  27_while_test2.c  28_while_test3.c  29_break.c  30_continue.c  31_while_if_test1.c  32_while_if_test2.c  33_while_if_test3.c  34_arr_expr_len.c  35_op_priority1.c  36_op_priority2.c  37_op_priority3.c  38_op_priority4.c  39_op_priority5.c  (+60 more)
Test/lib/: lib.ll  newlib.c  newlib.h  newlib.ll
Test/stdOut/: 00_main  52_scope
Test/stdSY/: 05_arr_defn4.sy  06_const_var_defn2.sy  12_addc.sy  13_sub2.sy  16_mulc.sy  18_divc.sy  34_arr_expr_len.sy  44_stmt_expr.sy  51_short_circuit3.sy  52_scope.c  63_big_int_mul.sy  65_color.sy  66_exgcd.sy  67_reverse_output.sy  68_brainfk.sy  70_dijkstra.sy  73_int_io.sy  83_long_array.sy  89_many_globals.sy  92_register_alloc.sy
flex/: a.txt  test.l  test.yy.c
include/: AST.cpp  AST.hpp  Config.h  Define.hpp  Define.hpp.gch  SymbolTable.hpp  Token.hpp
include/IR/: BBlock.h  ConstValue.h  Function.h  GlobalVar.h  IRBuilder.h  Inst.h  Module.h  Type.h  Value.h  libsysy.h  tacIRBuilder.h
include/IRToArm/: IRToArm.h
include/LIR/: LirHearders.h
include/LIR/codegen/: ToLir.h
include/LIR/lirInst/: LirBinary.h  LirInst.h  LirInstMove.h
include/LIR/lirOperand/: Addr.h  FImm.h  FPhyReg.h  FVReg.h  IImm.h  IPhyReg.h  IVReg.h  Imm.h  Reg.h  lirOperand.h
include/LIR/visitor/: LirBlock.h  LirFunction.h  LirModule.h
include/LirPass/: RegAllocStack.h
include/LirToArm/: LirToArm.h  LirToArm1.h
include/Pass/: Domination.h  Mem2reg.h  Pass.h  PassManager.h  Pres_Succs_Calculate.h
include/Utils/: BiMap.h  ErrorConfig.h  IList.h
lexer/: a.txt  lex.cpp  lex.l
parser/: parser.cpp  parser.hpp  parser.y
semantic/: CMakeLists.txt  IR.cpp  errors.hpp  genExe.sh  genIR.cpp  genIR.hpp  testout.out  testout2.out
